tests/lean/tactic_failure.lean.expected.out
tactic_failure.lean:4:0: error: assumption tactic failed
state:
A : Type,
B : Type,
Hb : B
⊢ A
tactic_failure.lean:4:0: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
